--- a/TP2_Random/app/src/main/AndroidManifest.xml
+++ b/TP2_Random/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App_Random"
         tools:targetApi="31">
+        <activity android:name=".RulesActivity" />
         <activity
             android:name=".ScoreActivity"
             android:exported="false" />
